--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,17 @@
 language: crystal
 
-# Uncomment the following if you'd like Travis to run specs and check code formatting
+crystal:
+    - latest
+    - nightly
+
+install:
+  - shards install
+
 script:
   - crystal spec
   - crystal tool format --check
   - crystal docs
+
 deploy:
   provider: pages
   skip_cleanup: true
